tests/diagnostics/expressions/equality/not_equal_mismatch/expect.txt
# exit: 1
input/main.lang0:2:12: error: equality operators require same type
      return 1 != true
             ^
